Changes for 1.5
* Allowed double clicking for selecting a game, and had the choose game list be cached, with a refresh button. (qwertgold)

* Fixed bug in stats and xml exporter where the file name contained illegal characters, causing the file creation to fail. (veqryn)

* Fixed bug where clicking cancel in order to look around the map, during casualty selection, generated an error. (frigoref)

* Fixed bugs in alliance tracker related to players not being in an alliance. (veqryn)

* Fixed bugs in 'example' maps: Tic Tac Toe, King's Table, and Sliding Tiles 8-number. (veqryn)


Changes for 1.4
* Adding politicstext.properties for Napoleonic Empires. (veqryn)

* Massive update to Napoleonic Empires: FFA, to allow it to use Politics. (veqryn)

* Updating Pact of Steel 2 and Pacific test xmls. (veqryn)

* Added scroll bars to select casualties dialog panel. (veqryn)

* Sorted political actions based on player, type, and name. (veqryn)

* Capped Politics ui actions, and added scroll bars to the bottom button part. (veqryn)

* Fixed rendering issue where nations that were neutral to each other still caused red markup when in the same territory or sea zone. (frigoref)

* Fixed bug where victory city victories happened in FFA maps according to the current alliance rather than the player's alliance tracker. (veqryn)

* Added "upkeepCost" as an attachment for RelationshipTypeAttachment, which allows you to have a cost in order to maintain a relationship. (veqryn)

* Changed "invert" in rules attachments, trigger attachments, and political attachments, to work as a real logical negation. Now correctly follows boolean math. (veqryn)

* Added roundValue to relationshipInitialize, which is the beginning round a relationship starts out at. This should normally be "1", but if you have certain conditions set up, you may wish to change this to a negative or positive number to reflect what round you would like the condition to be true on. (veqryn)
