@@ -1935,7 +1935,8 @@
 	-->
 				<attatchment name="relationshipTypeAttachment" attatchTo="Allied" javaClass="games.strategy.triplea.attatchments.RelationshipTypeAttachment" type="relationship">
 						<option name="archeType" value="allied"/>
-						<option name="upkeepCost" value="3"/>
+						<!-- In case I want a flat PU rate back: <option name="upkeepCost" value="3"/>-->
+						<option name="upkeepCost" value="percentage" count="9"/>
 				</attatchment>
 
 				<attatchment name="relationshipTypeAttachment" attatchTo="War" javaClass="games.strategy.triplea.attatchments.RelationshipTypeAttachment" type="relationship">
@@ -1944,14 +1945,16 @@
 
 				<attatchment name="relationshipTypeAttachment" attatchTo="Ceasefire" javaClass="games.strategy.triplea.attatchments.RelationshipTypeAttachment" type="relationship">
 						<option name="archeType" value="neutral"/>
-						<option name="upkeepCost" value="1"/>
+						<!--<option name="upkeepCost" value="1"/>-->
+						<option name="upkeepCost" value="percentage" count="3"/>
 				</attatchment>
 
 				<attatchment name="relationshipTypeAttachment" attatchTo="Open_Borders" javaClass="games.strategy.triplea.attatchments.RelationshipTypeAttachment" type="relationship">
 						<option name="archeType" value="neutral"/>
 						<option name="canMoveLandUnitsOverOwnedLand" value="true"/>
 						<option name="canMoveAirUnitsOverOwnedLand" value="true"/>
-						<option name="upkeepCost" value="2"/>
+						<!--<option name="upkeepCost" value="2"/>-->
+						<option name="upkeepCost" value="percentage" count="6"/>
 				</attatchment>
 
 <!-- unit attachments -->
@@ -7522,11 +7525,12 @@ Nation................................ Allies&lt;br&gt;
 
 &lt;br&gt;
 &lt;br&gt;
-&lt;br&gt;How Politics works:
-&lt;br&gt;War has an upkeep of 0 PUs each turn
-&lt;br&gt;Ceasefire has an upkeep of 1 PUs each turn
-&lt;br&gt;Open Borders has an upkeep of 2 PUs each turn
-&lt;br&gt;Allied has an upkeep of 3 PUs each turn
+&lt;br&gt;Politics:
+&lt;br&gt;The further away from war you are with a nation, the less resources you are devoting to war. In addition, keeping treaties has an upkeep cost per turn, that affects your total income for that turn.
+&lt;br&gt;0% upkeep - War
+&lt;br&gt;3% upkeep - Ceasefire
+&lt;br&gt;6% upkeep - Open Borders
+&lt;br&gt;9% upkeep - Allied
 &lt;br&gt;
 &lt;br&gt;When Political Actions become available:
 &lt;br&gt;Moving from - Moving to - take X rounds (including current round)
